added airports endpoint
